feat: Implement Leaderboard functionality
This commit introduces a Leaderboard feature, allowing users to see their rank and compare their total push-ups with other users.

Key changes:

- **Leaderboard UI (`fragment_leaderboard.xml`, `item_leaderboard.xml`):**
    - Created `fragment_leaderboard.xml` to display the leaderboard.
        - Includes a "Back" button.
        - Shows the current user's rank, a comment based on their rank, and their total push-ups.
        - Uses a `RecyclerView` to list all users.
    - Created `item_leaderboard.xml` for individual user entries in the leaderboard, showing rank, profile picture, username, and push-up count.
- **Leaderboard Logic (`LeaderboardFragment.kt`, `LeaderboardAdapter.kt`):**
    - `LeaderboardFragment`:
        - Fetches leaderboard data from `DashboardViewModel`.
        - Updates the UI with the user's rank and a dynamic comment (e.g., "You’re on top!", "Almost there!").
        - Populates the `RecyclerView` using `LeaderboardAdapter`.
    - `LeaderboardAdapter`:
        - A `ListAdapter` to efficiently display the list of users on the leaderboard.
        - Uses `Glide` to load user profile pictures.
- **Navigation (`navigation.xml`, `DashboardFragment.kt`):**
    - Added a navigation action from `DashboardFragment` to `LeaderboardFragment`.
    - In `DashboardFragment.xml`, the "View More" text for "Top 5 Leaderboard" is now an active link to the `LeaderboardFragment`. Its ID is set to `leaderboard` and text color changed to `@color/primary`.
    - `DashboardFragment` now triggers `viewModel.loadLeaderboard()` in `onResume`.
- **String Resources (`strings.xml`):**
    - Added new strings for the Leaderboard screen, including rank text, rank comments, and a hyphen placeholder.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,9 @@
     <string name="save">Save</string>
     <string name="current">current - %1$d</string>
     <string name="highest">highest - %1$d</string>
+
+    <!-- Leaderboard -->
+    <string name="rankSampleText">You are at #-</string>
+    <string name="almost_there">Almost there</string>
+    <string name="hyphen">-</string>
 </resources>
