Refactor: Improve leaderboard rank display and comments
This commit enhances the user experience on the leaderboard by:

- **Parameterized Rank String:**
    - Updated `strings.xml` to include a new string `you_are_at_rank` which uses a placeholder for the rank number.
- **Improved Rank Display in `LeaderboardFragment.kt`:**
    - The user's rank text is now set using the new parameterized string `R.string.you_are_at_rank`, making it localization-friendly.
- **Enhanced Rank Comments:**
    - Added emojis and more encouraging text to the rank comments returned by `getRankComment()` for different rank ranges.
        - Rank 1: "🏆 You’re on top!"
        - Ranks 2-5: "🔥 Almost there!"
        - Ranks 6-10: "💪 Keep pushing!"
        - Other ranks: "👏 Stay consistent!"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,5 @@
     <string name="rankSampleText">You are at #-</string>
     <string name="almost_there">Almost there</string>
     <string name="hyphen">-</string>
+    <string name="you_are_at_rank">You are at #%1$d</string>
 </resources>
