feat: Add Daily Stats screen and update navigation
This commit introduces a new "Daily Stats" screen to display the user's daily push-up records. It also refactors the navigation and UI for existing screens.

Key changes:

- **Daily Stats Feature:**
    - `DailyStatsFragment.kt`: New fragment to display a list of daily push-up records.
        - Uses `DailyStatsViewModel` to fetch and observe data.
        - Includes loading and error state handling.
        - Reloads data `onResume`.
    - `DailyStatsViewModel.kt` & `DailyStatsViewModelFactory.kt`: New ViewModel and factory for `DailyStatsFragment`.
        - Fetches all daily stats for the current user using `DailyStatsRepository`.
    - `DailyStatsRepository.kt`: New repository to fetch all daily push-up stats for a user, ordered by date descending.
    - `DailyStatsAdapter.kt`: New RecyclerView adapter to display `DailyPushStats` in `DailyStatsFragment`.
        - Formats active time into minutes and seconds.
    - `fragment_daily_stats.xml`: Layout for `DailyStatsFragment`, including a RecyclerView and a loading indicator.
    - `item_records.xml`: Layout for individual items in the daily stats RecyclerView, showing date, active time, and push-up count.
    - `strings.xml`: Added placeholder "hello_blank_fragment".

- **Navigation & UI Updates:**
    - `navigation.xml`: Added `dailyStatsFragment` to the navigation graph.
    - `bottom_nav.xml`: Added "Daily Stats" item (with `timer` icon) to the bottom navigation menu, linking to `dailyStatsFragment`.
    - `HomeActivity.kt`:
        - Updated bottom navigation visibility logic to include `dailyStatsFragment`.
        - The `startButton` and `view` (divider) are now also shown/hidden based on whether the current destination is `dashboardFragment`, `leaderboardFragment`, or `dailyStatsFragment`.
    - `fragment_leaderboard.xml`: Removed the "Back" button as navigation is now handled by the bottom navigation bar.
    - `LeaderboardFragment.kt`: Removed `backButto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,6 @@
     <string name="almost_there">Almost there</string>
     <string name="hyphen">-</string>
     <string name="you_are_at_rank">You are at #%1$d</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
