Refactor: Update "records" string usage
This commit refactors the "records" text in `fragment_daily_stats.xml` to use a string resource and removes an unused placeholder string.

- **`strings.xml`:**
    - Added a new string resource: `<string name="records">records</string>`.
    - Removed the placeholder string `hello_blank_fragment`.
- **`fragment_daily_stats.xml`:**
    - Changed the `android:text` attribute of the "records" `TextView` from a hardcoded string to `@string/records`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="email">Email</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
+    <string name="records">records</string>
 
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
@@ -126,6 +127,4 @@
     <string name="almost_there">Almost there</string>
     <string name="hyphen">-</string>
     <string name="you_are_at_rank">You are at #%1$d</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
