feat: Use string resources for bottom navigation titles
This commit updates the bottom navigation menu to use string resources for its item titles, facilitating localization.

- **`strings.xml`:**
    - Added new string resources:
        - `home`
        - `daily_stats`
        - `leaderboard1`
- **`bottom_nav.xml`:**
    - Changed the `android:title` attributes for `dashboardFragment`, `dailyStatsFragment`, and `leaderboardFragment` to reference the newly added string resources (`@string/home`, `@string/daily_stats`, `@string/leaderboard1` respectively).
- **`HomeActivity.kt`:**
    - Changed `Context.MODE_PRIVATE` to `MODE_PRIVATE` when accessing shared preferences, as it's directly available within the Activity context.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="skip">Skip</string>
     <string name="next">Next</string>
     <string name="records">records</string>
+    <string name="home">Home</string>
 
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
@@ -127,4 +128,6 @@
     <string name="almost_there">Almost there</string>
     <string name="hyphen">-</string>
     <string name="you_are_at_rank">You are at #%1$d</string>
+    <string name="daily_stats">Daily Stats</string>
+    <string name="leaderboard1">Leaderboard</string>
 </resources>
