--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,6 @@
     <string name="you_are_at_rank">You are at #%1$d</string>
     <string name="daily_stats">Daily Stats</string>
     <string name="leaderboard1">Leaderboard</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
