feat: Implement Camera Access screen for permission handling
This commit introduces a new `CameraAccessFragment` to manage camera permission requests before navigating to the main dashboard.

Key changes:

- **`CameraAccessFragment.kt`:**
    - New fragment to explain why camera access is needed and to request the `CAMERA` permission.
    - Uses `ActivityResultContracts.RequestPermission()` for modern permission handling.
    - If permission is granted, navigates to `DashboardFragment`.
    - If permission is denied:
        - Shows a rationale dialog (`showPermissionRationale()`) if the user can be asked again.
        - Shows a "Go to Settings" dialog (`showGoToSettingsDialog()`) if the permission is permanently denied.
    - Includes a "Skip for now" button that navigates to the dashboard without camera permission.
    - Implements `showCustomDialog()` to display consistent permission-related dialogs using `DialogPermissionBinding`.

- **Layouts:**
    - **`fragment_camera_access.xml`:**
        - New layout for `CameraAccessFragment`.
        - Displays an illustrative image (`@drawable/camera_access_image`), title, description of camera usage, an "Allow Camera Access" button, and a "Skip for now" button.
    - **`dialog_permission.xml`:**
        - New layout for custom permission dialogs (rationale and go-to-settings).
        - Includes title, message, and OK/Cancel buttons.

- **Navigation (`navigation.xml`):**
    - Added `cameraAccessFragment` to the navigation graph.
    - Updated `SplashFragment` to navigate to `cameraAccessFragment` instead of `dashboardFragment` if the user is logged in.
    - Updated `OnBoardingFragment` to navigate to `cameraAccessFragment` after onboarding is complete.
    - Added an action from `cameraAccessFragment` to `dashboardFragment`.
    - Transitions between these fragments now use `slide_in_right`, `fade_out`, `fade_in`, and `slide_out_right` animations.

- **Strings (`strings.xml`):**
    - Added new string resources for 

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,17 @@
     <string name="you_are_at_rank">You are at #%1$d</string>
     <string name="daily_stats">Daily Stats</string>
     <string name="leaderboard1">Leaderboard</string>
+
+    <!-- Camera access -->
+    <string name="this_tracks_your_face_nto_count_pushups">This tracks your face\nto count pushups.</string>
+    <string name="skip_button_title">Skip for now</string>
+    <string name="allow_camera_button_title">Allow Camera Access</string>
+    <string name="camera_access_description">We use your camera to count pushups automatically.\nYour video is never saved or shared.</string>
+    <string name="camera_access">Camera Access</string>
+    <string name="this_app_requires_camera_access_to_function_properly">This app requires camera access to function properly.</string>
+    <string name="camera_permission_needed">Camera Permission Needed</string>
+    <string name="ok">OK</string>
+    <string name="permission_required">Permission Required</string>
+    <string name="camera_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Camera permission has been permanently denied. Please enable it in app settings.</string>
+    <string name="go_to_settings">Go to Settings</string>
 </resources>
