--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Durare</string>
     <string name="default_web_client_id">975598957627-eskfiukf0kj475nafdv2pp70vrdn96tn.apps.googleusercontent.com</string>
     <string name="status_ready">Ready to detect push-ups</string>
+    <string name="resting">Resting Time</string>
     <string name="status_go_up">Go up!</string>
     <string name="status_great">Great! Go down for next rep</string>
     <string name="status_ready_pushup">Ready for push-up</string>
