feat: Allow skipping rest period during workout
This commit introduces a feature allowing users to skip the rest period between sets and proceed to the next set immediately.

Key changes:

-   **UI and Layout (`activity_counter.xml`):**
    -   Added a new "Exit Rest" button (`@+id/exitRest`) that is only visible during the rest period.
    -   The "Reset" and "Done" buttons are now hidden during the rest period to prevent unintended actions.
    -   Enabled `animateLayoutChanges` on the bottom button container for smooth transitions when buttons appear and disappear.
    -   The tint of the timer icon was updated from `@color/grey` to `@color/light_grey`.

-   **Functionality (`CounterActivity.kt`):**
    -   Implemented an `onClickListener` for the new `exitRest` button.
    -   Clicking "Exit Rest" sets the remaining rest time to zero, immediately ending the rest timer.
    -   A new function, `onExitRestClick()`, handles the logic to transition out of the rest state and restores the visibility of the "Reset" and "Done" buttons.

-   **Resources:**
    -   Added a new string resource `exit_rest` in `strings.xml`.
    -   Added a new color `red` in `colors.xml` for the "Exit Rest" button background.
    -   Updated the `timer.xml` drawable with a new path data and fill color.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,6 @@
     <string name="permission_required">Permission Required</string>
     <string name="camera_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Camera permission has been permanently denied. Please enable it in app settings.</string>
     <string name="go_to_settings">Go to Settings</string>
+
+    <string name="exit_rest">Exit Rest</string>
 </resources>
