feat: Display set reminder time in Settings
This commit enhances the user experience by displaying the currently set reminder time directly on the Settings screen. It also removes a now-unused user profile card from the settings layout.

Key changes:

-   **`SettingsFragment.kt`**:
    -   When the view is created, it now checks if a reminder is set.
    -   If a reminder exists, it fetches the hour and minute from `Preferences`, formats the time as `HH:MM`, and displays it in the new `timer` TextView.

-   **`fragment_settings.xml`**:
    -   The user profile card (displaying name, email, and picture) has been removed from the layout.
    -   A new `CardView` containing a `TextView` with the ID `@+id/timer` has been added to the "Daily Reminder" section to show the set time.
    -   The text for the reminder setting has been changed from "Set Reminder" to "Daily Reminder" for clarity.

-   **`ReminderFragment.kt`**:
    -   The toast message shown after setting a reminder now correctly formats the time with leading zeros (e.g., "08:05") using `String.format` with `Locale.US` for consistency.

-   **`strings.xml`**:
    -   Updated string resources to reflect the UI changes, renaming `set_reminder` to `daily_reminder` and adding the former back for use in the `ReminderFragment`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,14 +144,14 @@
     <string name="camera_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Camera permission has been permanently denied. Please enable it in app settings.</string>
     <string name="go_to_settings">Go to Settings</string>
 
+    <!-- Daily Reminder -->
     <string name="exit_rest">Exit Rest</string>
-    <string name="set_reminder">Set Reminder</string>
+    <string name="daily_reminder">Daily Reminder</string>
     <string name="set_an_alarm_to_stay_consistent">Set an alarm to stay consistent</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="workout_reminder">workout reminder</string>
     <string name="enable_daily_reminder">Enable Daily Reminder</string>
     <string name="get_notified_at_your_preferred_time_to_start_your_pushups">Get notified at your preferred time to start your pushups.</string>
     <string name="activate">Activate</string>
     <string name="hours">Hours</string>
+    <string name="set_reminder">Set Reminder</string>
 </resources>
