feat: Add notification permission request screen
This commit introduces a new onboarding screen to request the `POST_NOTIFICATIONS` permission from the user. It also refactors the navigation flow to show this screen after the camera permission screen.

Key changes:

-   **`NotificationAccessFragment.kt`**:
    *   Created a new fragment to handle the notification permission request, which is required for Android 13 (API 33) and above.
    *   Uses the modern `ActivityResultContracts.RequestPermission()` launcher.
    *   Provides rationale and a "Go to Settings" prompt if the permission is denied.
    *   Includes a "Skip" option for users who do not wish to grant the permission.

-   **`fragment_notification_access.xml`**:
    *   Added a new layout for the notification permission screen, featuring a Lottie animation, descriptive text, and "Allow" and "Skip" buttons.

-   **Navigation Flow (`navigation.xml`)**:
    *   The `CameraAccessFragment` now navigates to the new `NotificationAccessFragment` upon success or skip.
    *   The `NotificationAccessFragment` then navigates to the `DashboardFragment`. This ensures the permission screens are shown in the correct order during onboarding.

-   **Resources**:
    *   Added new string resources for the notification permission screen's title, description, and rationale dialogs.
    *   Updated the `notification.json` Lottie animation file.

-   **`fragment_notifications.xml`**:
    *   The Lottie animation for notifications is now set to not loop.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,12 @@
     <string name="activate">Activate</string>
     <string name="hours">Hours</string>
     <string name="set_reminder">Set Reminder</string>
+
+    <!-- Notification access -->
+    <string name="notification_access">Notification Access</string>
+    <string name="allow_notifications">Allow Notifications</string>
+    <string name="notification_access_description">We send gentle reminders to help you stay consistent and take timely breaks.\nEnable notifications to receive:\n• Daily pushup reminders\n• Rest time alerts during workouts\nYou can manage or turn them off anytime.</string>
+    <string name="this_app_requires_notification_access_to_function_properly">This app requires notification access to function properly.</string>
+    <string name="notification_permission_needed">Notification Permission Needed</string>
+    <string name="notification_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Notification permission has been permanently denied. Please enable it in app settings.</string>
 </resources>
