feat: Add push-up analytics chart
This commit introduces a new analytics feature that displays a line chart of the user's push-up activity from the previous month on the "Analytics" screen.

The `vico` charting library has been added to render the chart.

Key changes:

-   **`DailyStatsFragment.kt`**:
    -   A new `CartesianChartView` has been added to the layout.
    -   A `setupCharts()` method configures the chart's appearance, including a gradient fill and cubic line connectors.
    -   It now observes `pushupCounts` from the ViewModel to populate the chart with data.
    -   The fragment now reloads chart data in `onResume()`.

-   **`DailyStatsViewModel.kt`**:
    -   Uses a `CartesianChartModelProducer` to manage and update the chart data.
    -   A new `loadThisMonthPushups()` function fetches push-up counts for the last month from the repository and updates both a `pushupCounts` LiveData and the chart model producer.

-   **`DailyStatsRepository.kt`**:
    -   Added a `fetchThisMonthPushupCounts()` method to query Firestore for push-up records from the previous full calendar month.

-   **`VicoChartMarker.kt`**:
    -   A new utility file has been created to provide a custom, styled marker for the chart, which appears when the user interacts with a data point.

-   **Layout and UI (`fragment_daily_stats.xml`, `strings.xml`, `styles.xml`)**:
    -   The "Daily Stats" screen has been renamed to "Analytics".
    -   The layout now includes a `CardView` to contain the new chart.
    -   A new style `ChartStyle` has been defined for the chart.

-   **Dependencies (`build.gradle.kts`, `libs.versions.toml`)**:
    -   The `com.patrykandpatrick.vico:views` library has been added to the project dependencies.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,8 +78,9 @@
     <string name="email">Email</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
-    <string name="records">records</string>
+    <string name="analytics">analytics</string>
     <string name="home">Home</string>
+    <string name="daily_records">daily records</string>
 
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
@@ -128,7 +129,6 @@
     <string name="almost_there">Almost there</string>
     <string name="hyphen">-</string>
     <string name="you_are_at_rank">You are at #%1$d</string>
-    <string name="daily_stats">Daily Stats</string>
     <string name="leaderboard1">Leaderboard</string>
 
     <!-- Camera access -->
