feat: Add title and description to analytics chart
This commit enhances the chart on the daily statistics screen by adding a title and a descriptive legend.

Key changes:

-   **`fragment_daily_stats.xml`**:
    -   Wrapped the `CartesianChartView` in a `ConstraintLayout` to facilitate positioning of new text elements.
    -   Added a `TextView` above the chart to serve as a title ("current month stats").
    -   Added a `TextView` below the chart to act as a legend, explaining what the vertical and horizontal axes represent ("push-up counts" and "days of the month").

-   **`strings.xml`**:
    -   Added new string resources for the chart title (`current_month_stats`) and the descriptive legend (`push_up_counts_days_of_the_month`). The legend string uses simple HTML for styling (bolding and color).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="analytics">analytics</string>
     <string name="home">Home</string>
     <string name="daily_records">daily records</string>
+    <string name="current_month_stats">current month stats</string>
+    <string name="push_up_counts_days_of_the_month"><font color="#FF690C"><b>↑</b></font> push-up counts &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <font color="#FF690C"><b>→</b></font> days of the month</string>
 
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
