style: Update dashboard UI text and card widths
This commit makes minor adjustments to the dashboard UI for better clarity and layout.

Key changes:

-   **`fragment_dashboard.xml`**:
    -   Increased the width of the "last 7 days," "last 30 days," and "so far" `CardView` elements from `120dp` to `130dp` to better accommodate the text.

-   **`strings.xml`**:
    -   Updated the string `this_week` to "last 7 days".
    -   Updated the string `this_month` to "last 30 days".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,8 @@
     <string name="current_streak_text">current - 11</string>
     <string name="highest_streak_text">highest - 26</string>
     <string name="current_streak_number">11</string>
-    <string name="this_month">this month</string>
-    <string name="this_week">this week</string>
+    <string name="this_month">last 30 days</string>
+    <string name="this_week">last 7 days</string>
     <string name="so_far">so far</string>
     <string name="leaderboard">leaderboard</string>
     <string name="view_more">View More</string>
