feat: Format large numbers for better readability
This commit introduces utility functions to format large integer and long values into a more readable, abbreviated format (e.g., "1.2K", "5M"). This formatting has been applied across the Dashboard and Leaderboard screens.

Key changes:

-   **`Extensions.kt`:**
    -   Added new `Int.formatToShortNumber()` and `Long.formatToShortNumber()` extension functions to convert numbers over 1,000 to "K" (thousands) and over 1,000,000 to "M" (millions) formats.
    -   Added a new `Int.formatWithCommas()` extension function.

-   **`DashboardFragment.kt`:**
    -   All pushup statistics (Today, Last 7/30 days, Lifetime) and streak counts (current and highest) are now formatted using `formatToShortNumber()`.
    -   The "All Users" total count now uses `formatWithCommas()` for improved readability.
    -   The leaderboard section within the dashboard also formats user pushup counts.

-   **`LeaderboardAdapter.kt`:**
    -   The main leaderboard now formats each user's total pushup count using `formatToShortNumber()`.

-   **`strings.xml`:**
    -   Updated the `current` and `highest` streak string resources to use a string placeholder (`%1$s`) instead of a digit placeholder to accommodate the new formatted text.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,8 +122,8 @@
     <string name="saved_successfully">Saved Successfully</string>
     <string name="permission_denied">Permission Denied</string>
     <string name="save">Save</string>
-    <string name="current">current - %1$d</string>
-    <string name="highest">highest - %1$d</string>
+    <string name="current">current - %1$s</string>
+    <string name="highest">highest - %1$s</string>
 
     <!-- Leaderboard -->
     <string name="rankSampleText">You are at #-</string>
