refactor: Separate sound and vibration feedback controls
This commit refactors the feedback settings by splitting the single "Counter feedback" option into two distinct, independently controllable settings: "Sound feedback" and "Vibration feedback".

This allows users to choose their preferred type of haptic or audio feedback during workouts.

Key changes:

-   **`fragment_personalize.xml`**:
    -   Replaced the single `counterFeedbackSwitch` with two new `MaterialSwitch` controls: `soundFeedbackSwitch` and `vibrationFeedbackSwitch`.
    -   Added descriptive text for each new setting.

-   **`Preferences.kt`**:
    -   Replaced `KEY_COUNTER_FEEDBACK` with `KEY_SOUND_FEEDBACK` (defaulting to `false`) and `KEY_VIBRATION_FEEDBACK` (defaulting to `true`).
    -   Updated getter and setter functions to manage the new preference keys.

-   **`PersonalizeFragment.kt`**:
    -   Updated to bind the new switches to their respective `SharedPreferences` values.
    -   Event listeners now save the state for sound and vibration feedback separately.

-   **`CounterActivity.kt`**:
    -   Replaced the single `counterFeedbackSwitch` boolean with `isSoundFeedbackEnabled` and `isVibrationFeedbackEnabled`.
    -   Modified the logic to trigger sound and vibration feedback independently based on the user's saved preferences.

-   **`strings.xml`**:
    -   Renamed `counter_feedback` to `vibration_feedback` and added a new `sound_feedback` string.
    -   Updated descriptive strings to match the new separate options.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,9 @@
     <string name="show_camera_card">Show camera card</string>
     <string name="a_camera_preview_to_just_n_make_sure_your_pushups_nare_getting_counted_correctly">A camera preview to just\n“make sure” your pushups\nare getting counted correctly.</string>
     <string name="turn_this_on_to_get_vibration_feedback_on_each_push_up_counts">Turn this “On” to get vibration feedback on each push-up counts</string>
-    <string name="counter_feedback">Counter feedback</string>
+    <string name="turn_this_on_to_get_sound_feedback_on_each_push_up_counts">Turn this “On” to get beep sound feedback on each push-up counts</string>
+    <string name="vibration_feedback">Vibration feedback</string>
+    <string name="sound_feedback">Sound feedback</string>
     <string name="total">Total</string>
     <string name="notifications1">notifications</string>
     <string name="all_notifications">All notifications</string>
