feat: Add push-up sensitivity controls
This commit introduces new settings in the "Personalize" screen, allowing users to adjust the sensitivity of the push-up detection algorithm. Two sliders have been added to control the "Lower Position Sensitivity" (down threshold) and "Upper Position Sensitivity" (up threshold).

These values are now persisted in `SharedPreferences` and used by the `PushUpDetector` to fine-tune when a push-up is registered.

Key changes:

-   **`fragment_personalize.xml`**:
    -   Added two new sections with `MaterialSlider` components for adjusting the `downThreshold` and `upThreshold`.
    -   Each slider includes a title, description, and a `TextView` to display the current value.

-   **`PersonalizeFragment.kt`**:
    -   Added logic to initialize the sliders with values from `SharedPreferences`.
    -   Implemented `addOnChangeListener` for each slider to update the `TextView` and save the new threshold value to `Preferences` as the user adjusts it.

-   **`Preferences.kt`**:
    -   Added new preference keys (`DOWN_THRESHOLD`, `UP_THRESHOLD`).
    -   Created getter and setter methods (`getDownThreshold`, `setDownThreshold`, `getUpThreshold`, `setUpThreshold`) to manage the new float values, with default values of `40f` and `25f` respectively.

-   **`PushUpDetector.kt`**:
    -   The detector now accepts a `Preferences` instance in its constructor.
    -   It no longer uses hardcoded constants for thresholds, instead fetching them from `SharedPreferences`.

-   **`CounterActivity.kt`**:
    -   Updated the `PushUpDetector` instantiation to pass the required `Preferences` instance.

-   **`strings.xml`**:
    -   Added new string resources for the titles, default values, and descriptive help text for the new sensitivity sliders.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,12 @@
     <string name="daily_records">daily records</string>
     <string name="current_month_stats">current month stats</string>
     <string name="push_up_counts_days_of_the_month"><font color="#FF690C"><b>↑</b></font> push-up counts &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <font color="#FF690C"><b>→</b></font> days of the month</string>
+    <string name="down_threshold_title">Lower Position Sensitivity</string>
+    <string name="down_threshold_value">40</string>
+    <string name="down_threshold_desc">Increase if push-ups are counted too early. Decrease if it’s not detecting your ‘down’ position even when you’re close.</string>
+    <string name="up_threshold_title">Upper Position Sensitivity</string>
+    <string name="up_threshold_value">25</string>
+    <string name="up_threshold_desc">Increase if new push-ups aren’t counted after going up. Decrease if it counts too quickly before you finish moving up.</string>
 
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
