refactor: Use string resources in PersonalizeFragment
This commit refactors `PersonalizeFragment` and its layout to use string resources instead of hardcoded text, improving localization and code maintainability.

Key changes:

-   **`values/strings.xml`**:
    -   Added new string resources for "Reset to defaults", "Yes", and the confirmation dialog message.

-   **`fragment_personalize.xml`**:
    -   The "Reset to defaults" button now uses the `@string/reset_to_defaults` resource.
    -   Removed an unused `android:animateLayoutChanges="true"` attribute from the root `LinearLayout`.

-   **`PersonalizeFragment.kt`**:
    -   The confirmation dialog shown when resetting settings now uses string resources for its title, message, and positive button text.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,9 @@
     <string name="this_app_requires_notification_access_to_function_properly">This app requires notification access to function properly.</string>
     <string name="notification_permission_needed">Notification Permission Needed</string>
     <string name="notification_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Notification permission has been permanently denied. Please enable it in app settings.</string>
+
+
+    <string name="reset_to_defaults">Reset to defaults</string>
+    <string name="yes">Yes</string>
+    <string name="are_you_sure_you_want_to_reset_to_default_values">Are you sure you want to reset to default values?</string>
 </resources>
