feat: Add top 3 leaderboard UI
This commit introduces a new UI section on the Leaderboard screen to visually highlight the top three ranked users.

Key changes:
- **`fragment_leaderboard.xml`**: Added a new `ConstraintLayout` containing a podium-style display for the top 3 users. This includes profile pictures, names, scores, and rank numbers. The user's own rank card is now hidden by default (`visibility="gone"`).
- **`LeaderboardFragment.kt`**:
    - A new `setupTop3` function has been added to populate the new UI with data for the top three users (image, name, and score).
    - This function is called after successfully fetching the leaderboard data.
- **`values/styles.xml`**: Added new `MaterialCardView` styles (`TopCornersRoundedCard`, `LeftCornersRoundedCard`, `RightCornersRoundedCard`) to create the custom shapes needed for the podium design.
- **`drawable/crown.xml`**: A new crown vector drawable has been added to be displayed above the #1 ranked user.
- **`values/strings.xml`**: Added string resources for the rank numbers "1", "2", and "3".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,7 @@
     <string name="email_body_contact">Hi Subhajit,\n\nI hope you\'re doing well. I\'m reaching out to request assistance with an issue I encountered while using the app.\n\n**Issue Details:**\n[Describe your issue or question here]\n\nI\'d really appreciate your help in resolving this. Please let me know if you need any additional details from my end.\n\nThank you for your time and support.\n\nBest regards,\n[Your Name]\n[Your Contact Information, optional]</string>
     <string name="email_subject_report">DurareApp: Reporting A Bug</string>
     <string name="email_body_report">Hi Subhajit,\n\nI encountered an issue while using the app and wanted to report it.\n\n**Bug Description:**\n[Describe the issue in detail]\n\n**Steps to Reproduce:**\n1. [Step one]\n2. [Step two]\n3. [Step three]\n\n**Expected Result:**\n[What you expected to happen]\n\n**Actual Result:**\n[What actually happened]\n\n**Device Information:**\n- Device Model: [e.g., Pixel 8]\n- Android Version: [e.g., Android 14]\n- App Version: [e.g., 1.2.3]\n\nI hope this helps with debugging. Please let me know if you need any additional information.\n\nThank you,\n[Your Name]</string>
+    <string name="_1">1</string>
+    <string name="_3">3</string>
+    <string name="_2">2</string>
 </resources>
