feat: Add "Ask AI" screen with speech-to-text
This commit introduces a new "Ask AI" feature, providing users with an interactive chat interface that includes speech-to-text functionality.

Key changes:

-   **`AskAiFragment.kt`**:
    -   A new fragment that manages the "Ask AI" UI and logic.
    -   Implements speech recognition using `SpeechRecognizer` to convert voice input into text.
    -   Handles microphone permission requests (`RECORD_AUDIO`) and provides user feedback.
    -   Displays a Lottie animation and text overlay while the microphone is actively listening.

-   **Layouts (`fragment_ask_ai.xml`, `fragment_dashboard.xml`):**
    -   Adds a new layout for the "Ask AI" screen, featuring a text input card with "send" and "speak" buttons, along with chips for "Use my stats" and "Remember".
    -   A Lottie animation (`chat_screen_bg.json`) is included for the listening state.
    -   The dashboard now contains a card that navigates to the "Ask AI" screen.

-   **Navigation (`navigation.xml`):**
    -   Adds `AskAiFragment` to the navigation graph with a corresponding action from the `DashboardFragment`.

-   **Resources:**
    -   Adds new string resources for the "Ask AI" interface.
    -   Includes new drawable icons (`mic.xml`, `send.xml`, `chat_history.xml`).
    -   Defines custom chip styles (`chip_background.xml`, `chip_text.xml`, `styles.xml`) for the UI.
    -   Adds the `RECORD_AUDIO` permission to `AndroidManifest.xml`.
    -   A new `remove()` extension function is added to `FrontendUtils.kt` to set view visibility to `GONE`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="status_camera_permission">Camera permission required</string>
     <string name="face_size_format">Face: %d%%</string>
     <string name="settings">settings</string>
-    <string name="ask_ai_bar_hint">ask ai anything…</string>
-    <string name="ask_ai">Ask Ai</string>
+    <string name="ask_ai_bar_hint">Ask Anything</string>
+    <string name="ask_ai">ask ai</string>
     <string name="person_name_1">Davian Allen</string>
     <string name="person_name_2">Isaac Osborne</string>
     <string name="person_name_3">Tobias Huber</string>
@@ -172,6 +172,15 @@
     <string name="notification_permission_needed">Notification Permission Needed</string>
     <string name="notification_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Notification permission has been permanently denied. Please enable it in app settings.</string>
 
+    <!-- Ask Ai -->
+    <string name="previous_conversions">previous conversions</string>
+    <string name="send">Send</string>
+    <string name="use_my_stats">📊 Use my stats</string>
+    <string name="remember">🧠 Remember</string>
+    <string name="listening">Listening…</string>
+    <string name="go_ahead_i_m_listening">Go ahead, I’m listening!</string>
+    <string name="processing_your_speech">Processing your speech…</string>
+    <string name="got_it">Got it!</string>
 
     <string name="reset_to_defaults">Reset to defaults</string>
     <string name="yes">Yes</string>
