--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,7 @@
     <string name="notification_permission_has_been_permanently_denied_please_enable_it_in_app_settings">Notification permission has been permanently denied. Please enable it in app settings.</string>
 
     <!-- Ask Ai -->
-    <string name="previous_conversions">previous conversions</string>
+    <string name="previous_conversations">conversations</string>
     <string name="send">Send</string>
     <string name="use_my_stats">📊 Use my stats</string>
     <string name="remember">🧠 Remember</string>
@@ -192,4 +192,5 @@
     <string name="_1">1</string>
     <string name="_3">3</string>
     <string name="_2">2</string>
+    <string name="more_options">more options</string>
 </resources>
