--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -193,4 +193,5 @@
     <string name="_3">3</string>
     <string name="_2">2</string>
     <string name="more_options">more options</string>
+    <string name="clear_chat">Clear chat</string>
 </resources>
